The implementation of some methods didn't match exactly the signature (XERCESC-1867)

git-svn-id: https://svn.apache.org/repos/asf/xerces/c/trunk@768978 13f79535-47bb-0310-9956-ffa450edef68